--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "@types/node": "^24.10.1",
     "@vitejs/plugin-vue": "^6.0.2",
     "@vue/tsconfig": "^0.8.1",
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.3",
+    "tailwindcss": "^3.4.17",
     "typescript": "~5.9.3",
     "vite": "^8.0.0-beta.13",
     "vue-tsc": "^3.1.5"
