add SCA script on sca action

--- a/.github/workflows/sca.yml
+++ b/.github/workflows/sca.yml
@@ -15,3 +15,41 @@ jobs:
     steps:
       - name: Dependency Review
         uses: actions/dependency-review-action@v4
+
+  format-check:
+    name: Formatter Check
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Setup Node
+        uses: actions/setup-node@v4
+        with:
+          node-version: 20
+          cache: npm
+
+      - name: Install dependencies
+        run: npm ci
+
+      - name: Check formatting
+        run: npm run format:check
+
+  sca-audit:
+    name: SCA Audit (audit-ci)
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Setup Node
+        uses: actions/setup-node@v4
+        with:
+          node-version: 20
+          cache: npm
+
+      - name: Install dependencies
+        run: npm ci
+
+      - name: Run SCA
+        run: npm run sca
