--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "sca": "audit-ci --moderate"
   },
   "dependencies": {
+    "pinia": "^3.0.4",
     "vue": "^3.5.25"
   },
   "devDependencies": {
@@ -23,14 +24,14 @@
     "@vue/tsconfig": "^0.8.1",
     "audit-ci": "^7.1.0",
     "autoprefixer": "^10.4.21",
-    "eslint": "^10.0.1",
+    "eslint": "^9.35.0",
     "eslint-config-prettier": "^10.1.8",
-    "eslint-plugin-vue": "^10.2.0",
+    "eslint-plugin-vue": "^10.4.0",
     "postcss": "^8.5.3",
     "prettier": "^3.6.2",
     "tailwindcss": "^3.4.17",
     "typescript": "~5.9.3",
-    "typescript-eslint": "^7.3.1",
+    "typescript-eslint": "^8.42.0",
     "vite": "^8.0.0-beta.13",
     "vue-tsc": "^3.1.5"
   },
